# code-analyzer

./: README.md  TODO.md  pyproject.toml
resources/: .gitignore  code-viz.html  display_v3.html  display_v5.html  graph.json  stats.json  test.html  test_react.html
resources/code-editor/: package.json  tsconfig.json  vite.config.ts
resources/code-editor/electron/: main.ts  menu.ts  preload.ts
resources/code-editor/public/: index.html
resources/code-editor/src/: editor.ts  global.d.ts  index.ts  style.css  webgl.ts
resources/data/: config.json  dependencies.json  hierarchy.json  modules.json
resources/web/: app-controller.js  app-layout.js  app-state.js  app.js  app.layout.js  camera-controller.js  camera.service.js  cluster-force.js  code-viz.html  controls.js  custom-force.js  dataset-controller.js  dataset-updater.js  display-controller.js  display-node-updater.js  display-updater.js  display_v5.html  event-handler.js  global-app.js  graph-camera-controller.js  graph-controller-camera.js  graph-controller-node.js  graph-controller-relation.js  graph-controller.js  graph-display.js  graph-edge-controller.js  graph-edge-updater.js  graph-filter.js  graph-force-updater.js  graph-group-updater.js  graph-node-controller.js  graph-node-renderer.js  graph-node-updater.js  graph-updater-dataset.js  graph-updater-group.js  graph-updater-node-text.js  graph-updater-node.js  graph-updater-physics.js  graph-updater-relation.js  graph-updater.js  (+20 more)
src/code_analyzer/: analyzer.py  app.py  node_stats_translate.py
tests/: test_project.py  test_tree_sitter_parser.py
(+203 files in other folders)
