[project]
name = "code-analyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "flo", email = "florent.legac@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "easy-kit>=0.1.25",
    "libcst>=1.8.2",
    "loguru>=0.7.3",
    "tabulate>=0.9.0",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
