[project]
name = "code-analyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "flo", email = "florent.legac@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "easy-kit>=0.1.25",
    "libcst>=1.8.2",
    "loguru>=0.7.3",
    "sexpdata>=1.0.2",
    "tabulate>=0.9.0",
    "tqdm>=4.67.1",
    "tree-sitter>=0.25.1",
    "tree-sitter-python>=0.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
